--- a/styles/homePage.css
+++ b/styles/homePage.css
@@ -2,175 +2,137 @@
  *  Home Page
  **********************************************************************/
 
- .laptop-hand-svg{
-  width: 700px;
-  height: 500px;
-  position: absolute; 
-  right: -20px;
-    top: 100px;
-  /* border:2px solid blue; */
-
+.laptop-hand-svg {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  left: -5em;
 }
-.homepage-text-container{
-  width: 600px;
-  height:500px;
-  /* border: 2px solid orange; */
+.homepage-text-container {
+  margin-top: 36px;
+  border-radius: 36px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
-.homepage-text-name{
-  font-family: Rubik Mono One, sans-serif;
+.homepage-text-name {
+  font-family: var(--font-heading), sans-serif;
+  font-weight: var(--font-weight-bolder);
   text-align: center;
   font-size: 70px;
   color: var(--drkGrey);
-  text-shadow: 5px 5px 0px var(--deSatBlue);
 }
 
-.hero-text-minor-container{
-  border: 1px solid var(--salmon);
+.hero-text-minor-container {
   font-size: x-large;
-  width:80%;
-  margin-bottom:  30px;
-  background-color: var(--vLtGrey);
+  width: 80%;
+  margin-bottom: 30px;
   padding: 10px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-weight: var(--font-weight-light);
+}
+.hero-text-minor {
+  padding: 0.5em 0em;
+  margin: 0;
+}
+.homepage-button {
+  width: auto;
+  font-size: 1.5em;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: var(--font-weight-bold);
+  box-shadow: -5px 5px 1px 1px var(--drkBlue);
+  margin-top: 8px;
+  height: fit-content;
+  padding: 0.5em 1em;
 }
 
-.homepage-button{
-font-size: large;
-padding: 10px;
-height:auto;
-text-shadow: none;
-}
-
-.homepage-button-container{
-  width: 80%;
+.homepage-button-container {
+  width: 100%;
+  padding: 0.5em;
   display: flex;
   flex-direction: row;
-  justify-content:space-around ;
+  justify-content: space-around;
   z-index: 2;
-  /* border: 2px purple solid; */
 }
 
-.homepage-illustrated-name{
-  width:100%;
+.homepage-illustrated-name {
+  width: 100%;
 }
 
-.fa-check{
+.fa-check {
   margin-right: 10px;
   margin-left: 20px;
-  color: var(--drkBlue)
+  color: var(--drkBlue);
 }
 
-.homepage-center-column{
-  /* border: 2px solid pink; */
+.homepage-center-column {
   width: 1000px;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: 1fr 1fr;
   height: 800px;
   position: relative;
+}
+
+.laptop-buttons-column {
+  margin-top: 5em;
+  height: 100%;
+  width: 100%;
+  display: grid;
 }
 /***********************************************************************
  *  MOBILE
  **********************************************************************/
 
-@media only screen and (max-width: 1050px) {
- body {
-   /* background-color: seagreen; */
- }
-
- .homepage-center-column{
-  width: 600px;
-}
-
-.homepage-text-name{
-  font-size: 40px;
-  margin: 0px;
-  margin-top: 10px;
-  
-}
-.hero-text-minor-container{
-  margin-bottom: 0px;
-  padding: 2px;
-  font-size: large;
-  flex-direction: row;
-  margin-top: 5px;
-}
-
-.fa-check{
-  margin-right: 8px;
-  margin-left: 10px;
-  color: var(--drkBlue)
-}
-.laptop-hand-svg {
-  width: 560px;
-  right: 34px;
-  top: 145px;
-}
-
-.homepage-button-container{
-  margin-top: 10px;
-}
-
-
-}
-
-@media only screen and (max-width: 400px) {
-  .homepage-center-column{
-    width: 400px;
+/* small mobile screens */
+@media only screen and (max-width: 760px) {
+  .homepage-center-column {
+    width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+    height: auto;
+    position: relative;
   }
 
-  .homepage-text-name{
+  .homepage-text-name {
     font-size: 30px;
   }
 
-  .hero-text-minor-container{
+  .hero-text-minor-container {
     font-size: large;
     width: 90vw;
     align-items: center;
     justify-content: space-around;
     margin-top: 10px;
-border: none;
+    border: none;
+    flex-direction: row;
   }
 
-.hero-text-minor-container p{ 
-  width: 25vw;
-  text-align: center;
-  color: var(--drkBlue);
-  font-weight: 800;
-
-}
-
-  .fa-check{
+  .fa-check {
     opacity: 0%;
-    position:absolute;
+    position: absolute;
     margin-right: 8px;
     margin-left: 10px;
-    color: var(--drkBlue)
+    color: var(--drkGrey);
   }
 
-  .homepage-button{
-    font-size: large;
-    padding: 2px;
-    height:auto;
-    box-shadow: -5px 5px 1px 1px var(--drkBlue);
-    margin-top: 8px;
+  .laptop-buttons-column {
+    margin-top: 0em;
+  }
+  .laptop-hand-svg {
+    width: 100vw;
+    left: 0;
   }
 
-    .laptop-hand-svg {
-      width: 500px;
-      right: 1px;
-      top: 136px;
+  .homepage-button {
+    padding: 2vw 5vw;
   }
-
-  .homepage-button-container{
-    width: 90vw;
-  }
-
 }
