--- a/styles/web.css
+++ b/styles/web.css
@@ -26,7 +26,7 @@
   border-radius: 5px;
   margin-bottom: 20px;
   border: 2px white solid;
-  font-family: Rubik Mono One, sans-serif;
+  font-family: var(--font-heading), sans-serif;
   color: var(--drkGrey);
   text-shadow: 1px 1px 1px var(--blue);
   font-size: 23px;
@@ -55,8 +55,6 @@
  *  Mobile
  **********************************************************************/
 @media only screen and (max-width: 400px) {
-
-
   .web-project {
     width: 300px;
   }
